musl/issues/SeqArray.out
* installing to library '/home/runner/R-patched/lib'
* installing *source* package 'SeqArray' ...
** this is package 'SeqArray' version '1.50.1'
** package 'SeqArray' successfully unpacked and MD5 sums checked
** using staged installation
** libs
using C compiler: 'gcc (Alpine 14.2.0) 14.2.0'
using C++ compiler: 'g++ (Alpine 14.2.0) 14.2.0'
make[1]: Entering directory '/var/local/PKGS/BIOC/SeqArray/src'
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DUSING_R -I'/home/runner/R-patched/lib/gdsfmt/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ConvGDS2VCF.cpp -o ConvGDS2VCF.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DUSING_R -I'/home/runner/R-patched/lib/gdsfmt/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ConvToGDS.cpp -o ConvToGDS.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DUSING_R -I'/home/runner/R-patched/lib/gdsfmt/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c ConvVCF2GDS.cpp -o ConvVCF2GDS.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DUSING_R -I'/home/runner/R-patched/lib/gdsfmt/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c FileMerge.cpp -o FileMerge.o
g++ -std=gnu++20 -I"/home/runner/R-patched/build/include" -DNDEBUG -DUSING_R -I'/home/runner/R-patched/lib/gdsfmt/include' -I/usr/local/include    -fpic  -O2 -mtune=native -Wno-ignored-attributes   -c GetData.cpp -o GetData.o
GetData.cpp: In function 'SEXPREC* SeqArray::get_env_R(CFileInfo&, TVarMap&, void*)':
GetData.cpp:1180:34: error: 'Rf_findVarInFrame' was not declared in this scope; did you mean 'findVarInFrame'?
 1180 |                         SEXP v = Rf_findVarInFrame(Env, Rf_install(varnm));
      |                                  ^~~~~~~~~~~~~~~~~
      |                                  findVarInFrame
make[1]: *** [/home/runner/R-patched/build/etc/Makeconf:199: GetData.o] Error 1
make[1]: Leaving directory '/var/local/PKGS/BIOC/SeqArray/src'
make[1]: Entering directory '/var/local/PKGS/BIOC/SeqArray/src'
make[1]: Leaving directory '/var/local/PKGS/BIOC/SeqArray/src'
ERROR: compilation failed for package 'SeqArray'
* removing '/home/runner/R-patched/lib/SeqArray'
